Output which was calculated in the intensity notebook is now calculated in the monte carlo notebook, changed readme accordingly

--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Monte Carlo\n",
     "\n",
-    "This notebook creates two files. For a given number of market situations and a given set of prices, it creates features and saves them in the `demand_prediction_data` file. Next, for each market situation and each price, the notebook runs multiple simulations and tracks purchases. The time horizon is 1.\n",
+    "This notebook creates three files. For a given number of market situations and a given set of prices, it creates features and saves them in the `demand_prediction_data` file. Next, for each market situation and each price, the notebook runs multiple simulations and tracks purchases. The notebook then calculates the probabilities of a purchase for each price and market situation and stores them in the `PEW_comparison` file.\n",
     "\n",
-    "Finally, the notebook calculates the probabilities of a purchase for each price and market situation and stores them in the `PEW_comparison` file.\n",
+    "After this, for one price, the time between adjustments of prices gets split into B parts and for each purchase the time slot o fit is tracked. At the end, it outputs a probability for each time slot, which corresponds to how likely a purchase is in this time slot after a price adjustment. The probabilities are saved in the `cond_prob_out` file. The time horizon is 1.\n",
     "\n",
     "Because of performance reasons the number of simulations and the number of considered market situations used in the start configuration are smaller than the ones used for the data for the paper. The inline comments show the values used in the paper, which lead to a longer runtime."
    ]
@@ -29,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "numberPlayers = 5\n",
@@ -45,7 +43,10 @@
     "numberConsideredMarketSituations = 10   # value used for paper: 40\n",
     "m = 2\n",
     "numberCustomerEvents = 4\n",
-    "reactionTimeCompany = timeHorizon"
+    "reactionTimeCompany = timeHorizon\n",
+    "intensity_price = 7\n",
+    "price_index = np.where(prices== intensity_price)[0][0]\n",
+    "bb = 20"
    ]
   },
   {
@@ -186,7 +187,6 @@
     "\n",
     "timeBetweenCustomerEvents = np.array([[meanTimeBetweenCustomerArrival*np.random.exponential() for _ in range(numberCustomerEvents)]for simulationNumber in range(numberSimulations)])\n",
     "timeCustomerEvents = np.array([[calculateTimeOfCustomerArrival(customer, simulationNumber, timeBetweenMarketEventsCustomer) for customer in range(numberCustomerEvents)] for simulationNumber in range(numberSimulations)])\n",
-    "\n",
     "adjustingFirm = np.array([[min(np.where(timeOfAdjustmentsCompany[simulationNumber]==priceAdjustmentsBeforeHorizon[simulationNumber][i] )[0]) for i in range(numberPriceAdjustmentsBeforeHorizon[simulationNumber])] for simulationNumber in range(numberSimulations)])\n",
     "\n",
     "randomCustomerScoringQuality = np.array([[random.uniform(0,1) for _ in range(numberCustomerEvents)] for simulationNumber in range(numberSimulations)])\n",
@@ -198,9 +198,9 @@
     "pricesCompaniesAdjustments = np.array([[[[[pricesCompanies[k,a,w]  for k in range(numberPlayers)]for _ in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
     "pricesCompaniesAdjustments = np.array([[[np.array(calculatePrices(pricesCompaniesAdjustments[a,w,s], adjustingFirm[s])) for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
     "\n",
-    "gen = np.array([[[[list((x for x in range(numberCustomerEvents) if timeMarketEvents[s][i]< timeCustomerEvents[s][x]< timeMarketEvents[s][i+1])) for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
-    "randomCustomerScoring = np.array([[[[[[(pricesCompaniesAdjustments[a,w,s][i,k] + customerScoringQualityRating[w,s,c,k]) for k in range(numberPlayers)]for c in gen[a,w,s][i]]for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
-    "randomCustomerDecision = np.array([[[[[np.argmin(randomCustomerScoring[a,w,s][i][c]) if min(randomCustomerScoring[a,w,s][i][c])< random.uniform(5,15) else -1 for c in range(len(gen[a,w,s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "gen = np.array([[[[[x for x in range(numberCustomerEvents) if timeMarketEvents[s][i]< timeCustomerEvents[s][x]< timeMarketEvents[s][i+1]] for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "randomCustomerScoring = np.array([[[[[[(pricesCompaniesAdjustments[a,w,s][i,k] + customerScoringQualityRating[w,s,c,k]) for k in range(numberPlayers)]for c in np.squeeze(gen[a,w,s])[i]]for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "randomCustomerDecision = np.array([[[[[np.argmin(randomCustomerScoring[a,w,s][i][c]) if min(randomCustomerScoring[a,w,s][i][c])< random.uniform(5,15) else -1 for c in range(len(np.squeeze(gen[a,w,s])[i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
     "As = np.array([[[[np.count_nonzero(np.hstack(randomCustomerDecision[a,w,s])== k) for k in range(numberPlayers)]for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
     "\n",
     "A = np.array([[[[1/numberSimulations*np.count_nonzero(As[a,w,:,k]==x) for k in range(numberPlayers)]for x in range(6)]for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
@@ -218,7 +218,19 @@
     "    for w in range(numberConsideredMarketSituations):\n",
     "        for a in range(len(prices)):\n",
     "            line = [w+1,prices[a],P_ori[a][w], P_ori2[a][w], predictionEstimated[w][a], EW_ori[a][w], EW_est[a][w], D_P[a], D_EW[a]]\n",
-    "            writer.writerow(line)"
+    "            writer.writerow(line)\n",
+    "\n",
+    "w = 0\n",
+    "\n",
+    "b = np.array([[[int(round((timeCustomerEvents[s][c]+1/bb/2)*bb))for c in range(len(gen[price_index,w,s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[s])] for s in range(numberSimulations)])\n",
+    "\n",
+    "At = np.array([[sum([sum([sum([1 if b[s][i][c]==t and randomCustomerDecision[price_index,w,s][i][c]==k  else 0 for c in range(len(gen[price_index,w,s][i]))])for i in range(numberPriceAdjustmentsBeforeHorizon[s])])for s in range(numberSimulations)])for k in range(numberPlayers)]for t in range(reactionTimeCompany*bb+1)])\n",
+    "\n",
+    "with open('cond_prob_out_S3.csv', 'w') as file:\n",
+    "    writer = csv.writer(file, delimiter='\\t')\n",
+    "    for t in range(reactionTimeCompany*bb+1):\n",
+    "        line = [t/bb, At[t][watchedCompany]/numberSimulations]\n",
+    "        writer.writerow(line)"
    ]
   }
  ],
