Remove output which isn't used nor useful.

--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +213,12 @@
     "P_ori2 = [[sum([A[a,w,2,watchedCompany]for x in range(2,6)])for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]\n",
     "\n",
     "EW_ori = [[prices[a]*P_ori[a][w] for w in range(numberConsideredMarketSituations)]for a in range(len(prices))]\n",
-    "EW_est = [[prices[a]*predictionEstimated[w][a] for w in range(numberConsideredMarketSituations)]for a in range(len(prices))]\n",
-    "\n",
-    "D_P = [1/numberConsideredMarketSituations*sum([abs(P_ori[a][w]- predictionEstimated[w][a]) for w in range(numberConsideredMarketSituations)]) for a in range(len(prices))]\n",
-    "D_EW = [1/numberConsideredMarketSituations*sum([abs(EW_ori[a][w]- EW_est[a][w]) for w in range(numberConsideredMarketSituations)]) for a in range(len(prices))]\n",
     "\n",
     "with open('PEW_comparison_S3.csv', 'w') as file:\n",
     "    writer = csv.writer(file, delimiter='\\t')\n",
     "    for w in range(numberConsideredMarketSituations):\n",
     "        for a in range(len(prices)):\n",
-    "            line = [w+1,prices[a],P_ori[a][w], P_ori2[a][w], predictionEstimated[w][a], EW_ori[a][w], EW_est[a][w], D_P[a], D_EW[a]]\n",
+    "            line = [w+1,prices[a],P_ori[a][w], P_ori2[a][w], EW_ori[a][w]]\n",
     "            writer.writerow(line)\n",
     "\n",
     "w = 0\n",
