The Monte Carlo notebook creates files for all three strategies outlined in the paper.

--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -41,7 +41,8 @@
     "iterateSameStart = 1\n",
     "companyToWatch = 0\n",
     "currentLine = 0\n",
-    "strategies = [\"S1\",\"S2\",\"S3\"]"
+    "strategies = [\"S1\",\"S2\",\"S3\"]\n",
+    "random.seed(12530586)"
    ]
   },
   {
@@ -129,8 +130,7 @@
     "np.array([[timeAdjustmentsWatchedCompany[d,s].insert(0,0) for s in range(iterateSameStart)] for d in range(iterateDifferentStart)])\n",
     "np.array([[timeAdjustmentsWatchedCompany[d,s].extend([timeHorizon]) for s in range(iterateSameStart)] for d in range(iterateDifferentStart)])\n",
     "\n",
-    "timeBetweenAdjustmentsWatchedCompany = np.array([[[timeAdjustmentsWatchedCompany[d,s][i] - timeAdjustmentsWatchedCompany[d,s][i-1] for i in range(1, countAdjustmentsWatchedCompany[d,s])]for s in range(iterateSameStart)] for d in range(iterateDifferentStart)])\n",
-    "\n"
+    "timeBetweenAdjustmentsWatchedCompany = np.array([[[timeAdjustmentsWatchedCompany[d,s][i] - timeAdjustmentsWatchedCompany[d,s][i-1] for i in range(1, countAdjustmentsWatchedCompany[d,s])]for s in range(iterateSameStart)] for d in range(iterateDifferentStart)])"
    ]
   },
   {
@@ -166,7 +166,7 @@
     "        '2' : lambda pricesCompanies, c: price_if_smaller_else(12,6,5.9,pricesCompanies,c),\n",
     "        '3' : lambda pricesCompanies, c: round(random.uniform(11,11),2),\n",
     "        '4' : lambda pricesCompanies, c: round(random.uniform(13,13),2)\n",
-    "    }\n"
+    "    }"
    ]
   },
   {
