--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -49,7 +49,7 @@
     "intensity_price = 7\n",
     "price_index = np.where(prices== intensity_price)[0][0]\n",
     "bb = 20\n",
-    "\n",
+    "strategies = [\"S1\",\"S2\",\"S3\"]\n",
     "random.seed(12530586)"
    ]
   },
@@ -140,6 +140,42 @@
    },
    "outputs": [],
    "source": [
+    "def price_if_smaller_else(price, price_smaller, else_min, prices_comp, c):\n",
+    "    return(price if min(prices_comp[comp] for comp in range(numberPlayers) if comp!=c)< price_smaller else round(min([max(else_min, prices_comp[company]-0.5) for company in range(numberPlayers) if company != c]),2))\n",
+    "\n",
+    "s1 = {\n",
+    "        '0' : lambda pricesCompanies, c: round(random.uniform(0,15),2),\n",
+    "        '1' : lambda pricesCompanies, c: round(random.uniform(5,15),2),\n",
+    "        '2' : lambda pricesCompanies, c: round(random.uniform(5,15),2),\n",
+    "        '3' : lambda pricesCompanies, c: round(random.uniform(5,15),2),\n",
+    "        '4' : lambda pricesCompanies, c: round(random.uniform(5,15),2)\n",
+    "    }\n",
+    "\n",
+    "s2 = {\n",
+    "        '0' : lambda pricesCompanies, c: price_if_smaller_else(10,5,4.9,pricesCompanies,c),\n",
+    "        '1' : lambda pricesCompanies, c: price_if_smaller_else(10,5,4.9,pricesCompanies,c),\n",
+    "        '2' : lambda pricesCompanies, c: price_if_smaller_else(10,5,4.9,pricesCompanies,c),\n",
+    "        '3' : lambda pricesCompanies, c: price_if_smaller_else(10,5,4.9,pricesCompanies,c),\n",
+    "        '4' : lambda pricesCompanies, c: price_if_smaller_else(10,5,4.9,pricesCompanies,c)\n",
+    "    }\n",
+    "\n",
+    "s3 = {\n",
+    "        '0' : lambda pricesCompanies, c: price_if_smaller_else(10,5,4.9,pricesCompanies,c),\n",
+    "        '1' : lambda pricesCompanies, c: price_if_smaller_else(9,4,3.9,pricesCompanies,c),\n",
+    "        '2' : lambda pricesCompanies, c: price_if_smaller_else(12,6,5.9,pricesCompanies,c),\n",
+    "        '3' : lambda pricesCompanies, c: round(random.uniform(11,11),2),\n",
+    "        '4' : lambda pricesCompanies, c: round(random.uniform(13,13),2)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def calculateTimeOfAdjustmentsCompany(company, i, timeBetweenMarketEventsCompany):\n",
     "    if i==0:\n",
     "        if company != watchedCompany:\n",
@@ -154,44 +190,31 @@
     "        return timeBetweenMarketEventsCustomer[customer]\n",
     "    else:\n",
     "        return(calculateTimeOfCustomerArrival(customer-1, timeBetweenMarketEventsCustomer) + timeBetweenMarketEventsCustomer[customer])\n",
-    "    \n",
-    "def priceAdjustmentRules(c, pricesCompanies):\n",
-    "    return {\n",
-    "        '0' : pricesCompanies[0],\n",
-    "        '1' : 9 if pricesCompanies[c]<4 else round(min([max(3.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
-    "        '2' : 12 if pricesCompanies[c]<6 else round(min([max(5.9, pricesCompanies[company]-0.5) for company in range(numberPlayers) if company != c]),2),\n",
-    "        '3' : round(random.uniform(11,11),2),\n",
-    "        '4' : round(random.uniform(13,13),2)\n",
-    "    }[str(c)]\n",
     "\n",
-    "def calculatePrices(pricesCompaniesAdjustments, adjustingFirm):\n",
-    "    for i in range(len(pricesCompaniesAdjustments)):\n",
-    "        if i > 0:\n",
-    "            if adjustingFirm[i]>-1:\n",
-    "                pricesCompaniesAdjustments[i][adjustingFirm[i]] = priceAdjustmentRules(adjustingFirm[i],pricesCompaniesAdjustments[i-1])\n",
+    "def calculatePrices(pricesCompaniesAdjustments, adjustingFirm, strategy):\n",
+    "    for i in range(1,len(pricesCompaniesAdjustments)-1):        \n",
+    "        pricesCompaniesAdjustments[i][adjustingFirm[i]] = strategy[str(adjustingFirm[i])](pricesCompaniesAdjustments[i-1],adjustingFirm[i])\n",
+    "    pricesCompaniesAdjustments[len(pricesCompaniesAdjustments)-1] = pricesCompaniesAdjustments[len(pricesCompaniesAdjustments)-2]\n",
     "    return pricesCompaniesAdjustments"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "timeBetweenMarketEventsCompany = np.array([[[[[random.uniform(0.8,1.2) if i>0 else random.uniform(0,1) for i in range(m)] for company in range(numberPlayers)] for _ in range(numberSimulations)]for w in range(numberConsideredMarketSituations)] for _ in range(len(prices))])\n",
+    "timeBetweenMarketEventsCompany = np.array([[[[[random.uniform(0.8,1.2) for i in range(m)] for company in range(numberPlayers)] for _ in range(numberSimulations)]for w in range(numberConsideredMarketSituations)] for _ in range(len(prices))])\n",
     "timeOfAdjustmentsCompany = np.array([[[[[calculateTimeOfAdjustmentsCompany(company ,i, timeBetweenMarketEventsCompany[p,w,simulationNumber]) for i in range(m)] for company in range(numberPlayers)] for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
-    "\n",
     "priceAdjustmentsBeforeHorizon = np.array([[[set([timeOfAdjustmentsCompany[p,w,simulationNumber].flatten()[i] for i in range(len(timeOfAdjustmentsCompany[p,w,simulationNumber].flatten())) if timeOfAdjustmentsCompany[p,w,simulationNumber].flatten()[i] < timeHorizon]) for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
+    "\n",
     "priceAdjustmentsBeforeHorizon = np.array([[[sorted(priceAdjustmentsBeforeHorizon[p,w,simulationNumber])+[timeHorizon] for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "\n",
     "numberPriceAdjustmentsBeforeHorizon = np.array([[[len(priceAdjustmentsBeforeHorizon[p,w,simulationNumber]) for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "\n",
     "timeMarketEvents = np.array([[[[0 if i==0 else priceAdjustmentsBeforeHorizon[p,w,simulationNumber][i-1] for i in range(numberPriceAdjustmentsBeforeHorizon[p,w,simulationNumber]+1)]for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "\n",
-    "adjustingFirm = np.array([[[[min(np.where(timeOfAdjustmentsCompany[p,w,simulationNumber]==priceAdjustmentsBeforeHorizon[p,w,simulationNumber][i] )[0]) if priceAdjustmentsBeforeHorizon[p,w,simulationNumber][i]!= timeHorizon else -1 for i in range(numberPriceAdjustmentsBeforeHorizon[p,w,simulationNumber])] for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
-    "\n",
+    "adjustingFirm = np.array([[[[min(np.where(timeOfAdjustmentsCompany[p,w,simulationNumber]==priceAdjustmentsBeforeHorizon[p,w,simulationNumber][i] )[0]) if priceAdjustmentsBeforeHorizon[p,w,simulationNumber][i]!= timeHorizon and i!=0 else -1 for i in range(numberPriceAdjustmentsBeforeHorizon[p,w,simulationNumber])] for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "timeBetweenCustomerEvents = np.array([[[[meanTimeBetweenCustomerArrival*np.random.exponential() for _ in range(numberCustomerEvents)]for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "timeCustomerEvents = np.array([[[[calculateTimeOfCustomerArrival(customer, timeBetweenCustomerEvents[p,w,simulationNumber]) for customer in range(numberCustomerEvents)] for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "\n",
@@ -202,26 +225,27 @@
     "    randomCustomerScoringRating[p,w,s][c]*(100-ratingCompaniesPred[k,w]))for k in range(numberPlayers)] for c in range(numberCustomerEvents)] for s in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "pricesCompanies = np.array([[[pricesCompaniesPred[k,w] if k!=watchedCompany else prices[a] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]  for k in range(numberPlayers)])\n",
     "pricesCompaniesAdjustments = np.array([[[[[pricesCompanies[k,a,w]  for k in range(numberPlayers)]for _ in range(numberPriceAdjustmentsBeforeHorizon[a,w,s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
-    "pricesCompaniesAdjustments = np.array([[[np.array(calculatePrices(pricesCompaniesAdjustments[a,w,s], adjustingFirm[a,w,s])) for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "pricesCompaniesAdjustments = np.array([[[[np.array(calculatePrices(pricesCompaniesAdjustments[a,w,s], adjustingFirm[a,w,s], globals()[\"s{}\".format(strat+1)])) for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]for strat in range(len(strategies))])\n",
     "\n",
     "gen = np.array([[[[[x for x in range(numberCustomerEvents) if timeMarketEvents[a,w,s][i]< timeCustomerEvents[a,w,s][x]< timeMarketEvents[a,w,s][i+1]] for i in range(numberPriceAdjustmentsBeforeHorizon[a,w,s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
     "\n",
-    "randomCustomerScoring = np.array([[[[[[(pricesCompaniesAdjustments[a,w,s][i,k] + customerScoringQualityRating[a,w,s,c,k]) for k in range(numberPlayers)]for c in gen[a,w,s][i]]for i in range(numberPriceAdjustmentsBeforeHorizon[a,w,s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
-    "randomCustomerDecision = np.array([[[[[np.argmin(randomCustomerScoring[a,w,s][i][c]) if min(randomCustomerScoring[a,w,s][i][c])< random.uniform(5,15) else -1 for c in range(len(gen[a,w,s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[a,w,s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
-    "As = np.array([[[[np.count_nonzero(np.hstack(randomCustomerDecision[a,w,s])== k) for k in range(numberPlayers)]for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
+    "randomCustomerScoring = np.array([[[[[[[(pricesCompaniesAdjustments[strat,a,w,s][i,k] + customerScoringQualityRating[a,w,s,c,k]) for k in range(numberPlayers)]for c in gen[a,w,s][i]]for i in range(numberPriceAdjustmentsBeforeHorizon[a,w,s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]for strat in range(len(strategies))])\n",
+    "randomCustomerDecision = np.array([[[[[[np.argmin(randomCustomerScoring[strat,a,w,s][i][c]) if min(randomCustomerScoring[strat,a,w,s][i][c])< random.uniform(5,15) else -1 for c in range(len(gen[a,w,s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[a,w,s])] for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]for strat in range(len(strategies))])\n",
+    "As = np.array([[[[[np.count_nonzero(np.hstack(randomCustomerDecision[strat,a,w,s])== k) for k in range(numberPlayers)]for s in range(numberSimulations)] for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]for strat in range(len(strategies))])\n",
     "\n",
-    "A = np.array([[[[1/numberSimulations*np.count_nonzero(As[a,w,:,k]==x) for k in range(numberPlayers)]for x in range(6)]for w in range(numberConsideredMarketSituations)] for a in range(len(prices))])\n",
-    "P_ori = [[1- A[a,w,0,watchedCompany]for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]\n",
-    "P_ori2 = [[sum([A[a,w,2,watchedCompany]for x in range(2,6)])for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]\n",
+    "A = np.array([[[[[1/numberSimulations*np.count_nonzero(As[strat,a,w,:,k]==x) for k in range(numberPlayers)]for x in range(6)]for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]for strat in range(len(strategies))])\n",
+    "P_ori = [[[1- A[strat,a,w,0,watchedCompany]for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]for strat in range(len(strategies))]\n",
+    "P_ori2 = [[[sum([A[strat,a,w,x,watchedCompany]for x in range(2,6)])for w in range(numberConsideredMarketSituations)] for a in range(len(prices))]for strat in range(len(strategies))]\n",
     "\n",
-    "EW_ori = [[prices[a]*P_ori[a][w] for w in range(numberConsideredMarketSituations)]for a in range(len(prices))]\n",
+    "EW_ori = [[[prices[a]*P_ori[strat][a][w] for w in range(numberConsideredMarketSituations)]for a in range(len(prices))]for strat in range(len(strategies))]\n",
     "\n",
-    "with open('PEW_comparison_S3.csv', 'w') as file:\n",
-    "    writer = csv.writer(file, delimiter='\\t')\n",
-    "    for w in range(numberConsideredMarketSituations):\n",
-    "        for a in range(len(prices)):\n",
-    "            line = [w+1,prices[a],P_ori[a][w], P_ori2[a][w], EW_ori[a][w]]\n",
-    "            writer.writerow(line)\n",
+    "for strat in range(len(strategies)):\n",
+    "    with open('PEW_comparison_{}.csv'.format(strategies[strat]), 'w') as file:\n",
+    "        writer = csv.writer(file, delimiter='\\t')\n",
+    "        for w in range(numberConsideredMarketSituations):\n",
+    "            for a in range(len(prices)):\n",
+    "                line = [w+1,prices[a],P_ori[strat][a][w], P_ori2[strat][a][w], EW_ori[strat][a][w]]\n",
+    "                writer.writerow(line)\n",
     "\n",
     "w = 0\n",
     "\n",
@@ -230,22 +254,23 @@
     "\n",
     "pricesCompanies = np.array([intensity_price+20.5+2*(k-2) if k!=watchedCompany else intensity_price  for k in range(numberPlayers)])\n",
     "pricesCompaniesAdjustments = np.array([[[pricesCompanies[k]  for k in range(numberPlayers)]for _ in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)])\n",
-    "pricesCompaniesAdjustments = np.array([np.array(calculatePrices(pricesCompaniesAdjustments[s], adjustingFirm[price_index,w,s])) for s in range(numberSimulations)])\n",
+    "pricesCompaniesAdjustments = np.array([[np.array(calculatePrices(pricesCompaniesAdjustments[s], adjustingFirm[price_index,w,s], globals()[\"s{}\".format(strat+1)])) for s in range(numberSimulations)]for strat in range(len(strategies))])\n",
     "\n",
     "gen = np.array([[list([x for x in range(numberCustomerEvents) if timeMarketEvents[price_index,w,s][i]< timeCustomerEvents[price_index,w,s][x]< timeMarketEvents[price_index,w,s][i+1]]) for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)] )\n",
     "\n",
-    "randomCustomerScoring = np.array([[[[(pricesCompaniesAdjustments[s][i,k] + customerScoringQualityRating[s,c,k]) for k in range(numberPlayers)]for c in gen[s][i]]for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)])\n",
-    "randomCustomerDecision = np.array([[[np.argmin(randomCustomerScoring[s][i][c]) if min(randomCustomerScoring[s][i][c])< random.uniform(5,15) else -1 for c in range(len(gen[s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)])\n",
+    "randomCustomerScoring = np.array([[[[[(pricesCompaniesAdjustments[strat,s][i,k] + customerScoringQualityRating[s,c,k]) for k in range(numberPlayers)]for c in gen[s][i]]for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)]for strat in range(len(strategies))])\n",
+    "randomCustomerDecision = np.array([[[[np.argmin(randomCustomerScoring[strat,s][i][c]) if min(randomCustomerScoring[strat,s][i][c])< random.uniform(5,15) else -1 for c in range(len(gen[s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)]for strat in range(len(strategies))])\n",
     "\n",
     "b = np.array([[[int(round((timeCustomerEvents[price_index,w,s][c]+1/bb/2)*bb))for c in range(len(gen[s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)])\n",
     "\n",
-    "At = np.array([[sum([sum([sum([1 if b[s][i][c]==t and randomCustomerDecision[s][i][c]==k  else 0 for c in range(len(gen[s][i]))])for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])])for s in range(numberSimulations)])for k in range(numberPlayers)]for t in range(reactionTimeCompany*bb+1)])\n",
+    "At = np.array([[[sum([sum([sum([1 if b[s][i][c]==t and randomCustomerDecision[strat,s][i][c]==k  else 0 for c in range(len(gen[s][i]))])for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])])for s in range(numberSimulations)])for k in range(numberPlayers)]for t in range(reactionTimeCompany*bb+1)]for strat in range(len(strategies))])\n",
     "\n",
-    "with open('cond_prob_out_S3.csv', 'w') as file:\n",
-    "    writer = csv.writer(file, delimiter='\\t')\n",
-    "    for t in range(reactionTimeCompany*bb+1):\n",
-    "        line = [t/bb, At[t][watchedCompany]/numberSimulations]\n",
-    "        writer.writerow(line)"
+    "for strat in range(len(strategies)):\n",
+    "    with open('cond_prob_out_{}.csv'.format(strategies[strat]), 'w') as file:\n",
+    "        writer = csv.writer(file, delimiter='\\t')\n",
+    "        for t in range(reactionTimeCompany*bb+1):\n",
+    "            line = [t/bb, At[strat,t][watchedCompany]/numberSimulations]\n",
+    "            writer.writerow(line)"
    ]
   }
  ],
