Add a small description for each pricing strategy #5

--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -12,6 +12,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create the output files for three different pricing strategies:\n",
+    "\n",
+    "Strategy 1 (S1):  For the watched company we chose a random price between 0 and 15. For all the other companies, we chose a price between 5 and 15.\n",
+    "\n",
+    "Strategy 2 (S2): For each company we set the price at 10 if a company currently has a price below 5. if that isn't the case, we set the price as 4.9 or the lowest of the competitor prices-0.5, if no competitor price-0.5 is smaller than 4.9.\n",
+    "\n",
+    "Strategy 3 (S3): For the first three companies we use the approach from Strategy 2, except with different thresholds. The last two companies have a fixed price of either 11 or 13."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -204,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gen = np.array([[[[x for x in range(numberCustomerEvents) if timePriceAdjustments[d,s][i]< timeOfCustomerArrival[d,s][x]<= timePriceAdjustments[d,s][i+1]] for i in range(numberPriceAdjustmentsBeforeHorizon[d,s])] for s in range(iterateSameStart)] for d in range(iterateDifferentStart)])\n",
