Formatting of markdown description

--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -8,20 +8,17 @@
     "\n",
     "This notebook creates four files.\n",
     "For a given number of market situations, each market situation is simulated with the same starting condition multiple times for a specified time horizon.\n",
-    "For every simulation, we note the arrival of customers in the `arrival_out` file, the purchases in the `buying_out` file and the current price for each company in the `traject_out` file. In the `demand_learning_data` file we save explanatory variables for market situations and if there was a purchase in the current situation."
+    "For every simulation, we note the arrival of customers in the `arrival_out` file, the purchases in the `buying_out` file and the current price for each company in the `traject_out` file. In the `demand_learning_data` file we save explanatory variables for market situations and whether there was a purchase in the current situation."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create the output files for three different pricing strategies:\n",
-    "\n",
-    "Strategy 1 (S1):  For the watched company we chose a random price between 0 and 15. For all the other companies, we chose a price between 5 and 15.\n",
-    "\n",
-    "Strategy 2 (S2): For each company we set the price at 10 if a company currently has a price below 5. if that isn't the case, we set the price as 4.9 or the lowest of the competitor prices-0.5, if no competitor price-0.5 is smaller than 4.9.\n",
-    "\n",
-    "Strategy 3 (S3): For the first three companies we use the approach from Strategy 2, except with different thresholds. The last two companies have a fixed price of either 11 or 13."
+    "** We create the output files for three different pricing strategies:**\n",
+    "* _Strategy 1 (S1):_  For the watched company, we chose a random price between 0 and 15. For all the other companies, we chose a price between 5 and 15.\n",
+    "* _Strategy 2 (S2):_ For each company, we set the price to 10 if a company currently has a price below 5. If that isn't the case, we set the price as 4.9 or the lowest of the competitor prices-0.5, if no competitor price-0.5 is smaller than 4.9.\n",
+    "* _Strategy 3 (S3):_ For the first three companies we use the approach from Strategy 2, except with different thresholds. The last two companies have a fixed price of either 11 or 13."
    ]
   },
   {
@@ -260,7 +257,7 @@
     "                    for c in buying_out[strat,d,s][w]:\n",
     "                        writer.writerow(c)\n",
     "\n",
-    "    with open('traject1_out_{}.csv'.format(strategies[strat]), 'w') as file:\n",
+    "    with open('traject_out_{}.csv'.format(strategies[strat]), 'w') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for d in range(iterateDifferentStart):\n",
     "            for s in range(iterateSameStart):\n",
