Improve description for strategy 2.

--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "source": [
     "** We create the output files for three different pricing strategies:**\n",
-    "* _Strategy 1 (S1):_  For the watched company, we chose a random price between 0 and 15. For all the other companies, we chose a price between 5 and 15.\n",
-    "* _Strategy 2 (S2):_ For each company, we set the price to 10 if a company currently has a price below 5. If that isn't the case, we set the price as 4.9 or the lowest of the competitor prices-0.5, if no competitor price-0.5 is smaller than 4.9.\n",
+    "* _Strategy 1 (S1):_  For the watched company we chose a random price between 0 and 15. For all the other companies, we chose a price between 5 and 15.\n",
+    "* _Strategy 2 (S2):_ For each company we use the same pricing strategy. If one of the companies currently has a price below 5, then we set the price of the currently adjusting company to 10. If that isn't that case, we try to find the currently lowest price of each company, subtract 0.5 from the lowest price and return the resulting price as the new price for the currently adjusting company, if the resulting price is bigger than 4.9 . Else we set the price as 4.9 .\n",
     "* _Strategy 3 (S3):_ For the first three companies we use the approach from Strategy 2, except with different thresholds. The last two companies have a fixed price of either 11 or 13."
    ]
   },
