Create plot for conditional probabilities  (#14)
* The Market simulation notebook creates files for all three strategies outlined in the paper.

* The Monte Carlo notebook creates files for all three strategies outlined in the paper.

* Fixed value in Market Simulation.

* Add a small description for each pricing strategy #5

* Formatting of markdown description

* Improve description for strategy 2.

* Explain strategy 2 using code.

* Add plot with short description

* Fix merge issues

--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Monte Carlo\n",
     "\n",
-    "This notebook creates three files. For a given number of market situations and a given set of prices, it creates features and saves them in the `demand_prediction_data` file. Next, for each market situation and each price, the notebook runs multiple simulations and tracks purchases. The notebook then calculates the probabilities of a purchase for each price and market situation and stores them in the `PEW_comparison` file.\n",
-    "\n",
-    "After this, for one price, the time between adjustments of prices gets split into B parts and for each purchase the time slot o fit is tracked. At the end, it outputs a probability for each time slot, which corresponds to how likely a purchase is in this time slot after a price adjustment. The probabilities are saved in the `cond_prob_out` file. The time horizon is 1.\n",
+    "This notebook creates two files. For a given number of market situations and a given set of prices, it creates features and saves them in the `demand_prediction_data` file. Next, for each market situation and each price, the notebook runs multiple simulations and tracks purchases. The notebook then calculates the probabilities of a purchase for each price and market situation and stores them in the `PEW_comparison` file. The time horizon is 1.\n",
     "\n",
     "Because of performance reasons the number of simulations and the number of considered market situations used in the start configuration are smaller than the ones used for the data for the paper. The inline comments show the values used in the paper, which lead to a longer runtime."
    ]
@@ -23,7 +21,9 @@
    "source": [
     "import numpy as np\n",
     "import random\n",
-    "import csv"
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -46,9 +46,6 @@
     "m = 2\n",
     "numberCustomerEvents = 4\n",
     "reactionTimeCompany = timeHorizon\n",
-    "intensity_price = 7\n",
-    "price_index = np.where(prices== intensity_price)[0][0]\n",
-    "bb = 20\n",
     "strategies = [\"S1\",\"S2\",\"S3\"]\n",
     "random.seed(12530586)"
    ]
@@ -245,32 +242,7 @@
     "        for w in range(numberConsideredMarketSituations):\n",
     "            for a in range(len(prices)):\n",
     "                line = [w+1,prices[a],P_ori[strat][a][w], P_ori2[strat][a][w], EW_ori[strat][a][w]]\n",
-    "                writer.writerow(line)\n",
-    "\n",
-    "w = 0\n",
-    "\n",
-    "customerScoringQualityRating = np.array([[[(randomCustomerScoringQuality[price_index,w,s][c]*2 +\n",
-    "    randomCustomerScoringRating[price_index,w,s][c]*(100-98))for k in range(numberPlayers)] for c in range(numberCustomerEvents)] for s in range(numberSimulations)])\n",
-    "\n",
-    "pricesCompanies = np.array([intensity_price+20.5+2*(k-2) if k!=watchedCompany else intensity_price  for k in range(numberPlayers)])\n",
-    "pricesCompaniesAdjustments = np.array([[[pricesCompanies[k]  for k in range(numberPlayers)]for _ in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)])\n",
-    "pricesCompaniesAdjustments = np.array([[np.array(calculatePrices(pricesCompaniesAdjustments[s], adjustingFirm[price_index,w,s], globals()[\"s{}\".format(strat+1)])) for s in range(numberSimulations)]for strat in range(len(strategies))])\n",
-    "\n",
-    "gen = np.array([[list([x for x in range(numberCustomerEvents) if timeMarketEvents[price_index,w,s][i]< timeCustomerEvents[price_index,w,s][x]< timeMarketEvents[price_index,w,s][i+1]]) for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)] )\n",
-    "\n",
-    "randomCustomerScoring = np.array([[[[[(pricesCompaniesAdjustments[strat,s][i,k] + customerScoringQualityRating[s,c,k]) for k in range(numberPlayers)]for c in gen[s][i]]for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)]for strat in range(len(strategies))])\n",
-    "randomCustomerDecision = np.array([[[[np.argmin(randomCustomerScoring[strat,s][i][c]) if min(randomCustomerScoring[strat,s][i][c])< random.uniform(5,15) else -1 for c in range(len(gen[s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)]for strat in range(len(strategies))])\n",
-    "\n",
-    "b = np.array([[[int(round((timeCustomerEvents[price_index,w,s][c]+1/bb/2)*bb))for c in range(len(gen[s][i]))]for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])] for s in range(numberSimulations)])\n",
-    "\n",
-    "At = np.array([[[sum([sum([sum([1 if b[s][i][c]==t and randomCustomerDecision[strat,s][i][c]==k  else 0 for c in range(len(gen[s][i]))])for i in range(numberPriceAdjustmentsBeforeHorizon[price_index,w,s])])for s in range(numberSimulations)])for k in range(numberPlayers)]for t in range(reactionTimeCompany*bb+1)]for strat in range(len(strategies))])\n",
-    "\n",
-    "for strat in range(len(strategies)):\n",
-    "    with open('cond_prob_out_{}.csv'.format(strategies[strat]), 'w') as file:\n",
-    "        writer = csv.writer(file, delimiter='\\t')\n",
-    "        for t in range(reactionTimeCompany*bb+1):\n",
-    "            line = [t/bb, At[strat,t][watchedCompany]/numberSimulations]\n",
-    "            writer.writerow(line)"
+    "                writer.writerow(line)\n"
    ]
   }
  ],
