Remove unnecessary random.

--- a/market_simulation.ipynb
+++ b/market_simulation.ipynb
@@ -180,8 +180,8 @@
     "        '0' : lambda pricesCompanies, c: price_if_smaller_else(10,5,4.9,pricesCompanies,c),\n",
     "        '1' : lambda pricesCompanies, c: price_if_smaller_else(9,4,3.9,pricesCompanies,c),\n",
     "        '2' : lambda pricesCompanies, c: price_if_smaller_else(12,6,5.9,pricesCompanies,c),\n",
-    "        '3' : lambda pricesCompanies, c: round(random.uniform(11,11),2),\n",
-    "        '4' : lambda pricesCompanies, c: round(random.uniform(13,13),2)\n",
+    "        '3' : lambda pricesCompanies, c: 11,\n",
+    "        '4' : lambda pricesCompanies, c: 13\n",
     "    }"
    ]
   },
