--- a/intensity.ipynb
+++ b/intensity.ipynb
@@ -91,8 +91,8 @@
     "        '0' : lambda pricesCompanies, c: price_if_smaller_else(10,5,4.9,pricesCompanies,c),\n",
     "        '1' : lambda pricesCompanies, c: price_if_smaller_else(9,4,3.9,pricesCompanies,c),\n",
     "        '2' : lambda pricesCompanies, c: price_if_smaller_else(12,6,5.9,pricesCompanies,c),\n",
-    "        '3' : lambda pricesCompanies, c: round(random.uniform(11,11),2),\n",
-    "        '4' : lambda pricesCompanies, c: round(random.uniform(13,13),2)\n",
+    "        '3' : lambda pricesCompanies, c: 11,\n",
+    "        '4' : lambda pricesCompanies, c: 13\n",
     "    }"
    ]
   },
@@ -129,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "timeBetweenMarketEventsCompany = np.array([[[random.uniform(0.8,1.2) for i in range(m)] for company in range(numberPlayers)] for _ in range(numberSimulations)])\n",
