Plot price trajectories (#17)
* Remove unnecessary random.

* Add graph for plotting price trajectories.

* Fix huge issues regarding price and price adjustment time calculation.

* Change some naming.

*  Fix small things that Rainer wanted changed.

* Change naming intensity plot.

--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -173,14 +173,14 @@
    },
    "outputs": [],
    "source": [
-    "def calculateTimeOfAdjustmentsCompany(company, i, timeBetweenMarketEventsCompany):\n",
+    "def calculateTimeOfAdjustmentsCompany(company, i, timeBetweenMarketEventsCompany, first_reaction):\n",
     "    if i==0:\n",
     "        if company != watchedCompany:\n",
-    "            return(random.uniform(0,1))\n",
+    "            return first_reaction[company][i]\n",
     "        else:\n",
     "            return(reactionTimeCompany)\n",
     "    else:\n",
-    "        return(calculateTimeOfAdjustmentsCompany(company, i-1, timeBetweenMarketEventsCompany)+ timeBetweenMarketEventsCompany[company][i])\n",
+    "        return(calculateTimeOfAdjustmentsCompany(company, i-1, timeBetweenMarketEventsCompany, first_reaction)+ timeBetweenMarketEventsCompany[company][i-1])\n",
     "    \n",
     "def calculateTimeOfCustomerArrival(customer, timeBetweenMarketEventsCustomer):\n",
     "    if customer==0:\n",
@@ -189,8 +189,9 @@
     "        return(calculateTimeOfCustomerArrival(customer-1, timeBetweenMarketEventsCustomer) + timeBetweenMarketEventsCustomer[customer])\n",
     "\n",
     "def calculatePrices(pricesCompaniesAdjustments, adjustingFirm, strategy):\n",
+    "    pricesCompaniesAdjustments = np.array(pricesCompaniesAdjustments)\n",
     "    for i in range(1,len(pricesCompaniesAdjustments)-1):        \n",
-    "        pricesCompaniesAdjustments[i][adjustingFirm[i]] = strategy[str(adjustingFirm[i])](pricesCompaniesAdjustments[i-1],adjustingFirm[i])\n",
+    "        pricesCompaniesAdjustments[i:,adjustingFirm[i]] = strategy[str(adjustingFirm[i])](pricesCompaniesAdjustments[i-1],adjustingFirm[i])\n",
     "    pricesCompaniesAdjustments[len(pricesCompaniesAdjustments)-1] = pricesCompaniesAdjustments[len(pricesCompaniesAdjustments)-2]\n",
     "    return pricesCompaniesAdjustments"
    ]
@@ -204,7 +205,8 @@
    "outputs": [],
    "source": [
     "timeBetweenMarketEventsCompany = np.array([[[[[random.uniform(0.8,1.2) for i in range(m)] for company in range(numberPlayers)] for _ in range(numberSimulations)]for w in range(numberConsideredMarketSituations)] for _ in range(len(prices))])\n",
-    "timeOfAdjustmentsCompany = np.array([[[[[calculateTimeOfAdjustmentsCompany(company ,i, timeBetweenMarketEventsCompany[p,w,simulationNumber]) for i in range(m)] for company in range(numberPlayers)] for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
+    "first_reaction = np.array([[[[[random.uniform(0,1) for i in range(m)] for company in range(numberPlayers)] for _ in range(numberSimulations)]for w in range(numberConsideredMarketSituations)] for _ in range(len(prices))])\n",
+    "timeOfAdjustmentsCompany = np.array([[[[[calculateTimeOfAdjustmentsCompany(company ,i, timeBetweenMarketEventsCompany[p,w,simulationNumber], first_reaction[p,w,simulationNumber]) for i in range(m)] for company in range(numberPlayers)] for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "priceAdjustmentsBeforeHorizon = np.array([[[set([timeOfAdjustmentsCompany[p,w,simulationNumber].flatten()[i] for i in range(len(timeOfAdjustmentsCompany[p,w,simulationNumber].flatten())) if timeOfAdjustmentsCompany[p,w,simulationNumber].flatten()[i] < timeHorizon]) for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
     "\n",
     "priceAdjustmentsBeforeHorizon = np.array([[[sorted(priceAdjustmentsBeforeHorizon[p,w,simulationNumber])+[timeHorizon] for simulationNumber in range(numberSimulations)]for w in range(numberConsideredMarketSituations)]for p in range(len(prices))])\n",
